crates/libs/frieze/tests/ui/vec_of_option.rs
use frieze::Schema;

#[derive(Schema)]
struct S {
    x: Vec<Option<String>>,
}

fn main() {}
